--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ipfs-core": "^0.14.2",
     "ipfs-utils": "^9.0.5",
     "tslint": "^6.1.3",
     "typescript": "^4.6.3"
