--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
   "dependencies": {
     "ipfs-core": "^0.14.2",
     "ipfs-utils": "^9.0.5",
-    "tslint": "^6.1.3",
-    "typescript": "^4.6.3"
+    "tslint": "^6.1.3"
   },
   "files": [
     "./bin/*",
@@ -24,6 +23,7 @@
   ],
   "typings": "./lib/index.d.ts",
   "devDependencies": {
-    "@types/node": "^17.0.23"
+    "@types/node": "^17.0.23",
+    "typescript": "^4.4.4"
   }
 }
