--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
 		"target": "es2020",
 		"module": "es2020",
 		"moduleResolution": "node",
-		"esModuleInterop": true
+		"esModuleInterop": true,
+		"declaration": true
 	},
 	"include": [
 		"typings/**/*",
